kube/init/docker-registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: docker-registry
  namespace: docker-registry
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - whanos-registry.local
      secretName: registry-tls
  rules:
    - host: whanos-registry.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-registry
                port:
                  number: 5000
